src/tests/code/fail/fail_variable_shadowing_variable_different_type.u
entrypoint:~()
{
	x:i64{42};
	
	if(x=42)
	{
		x:double{43.0};
	}
}
->(x)